# cookiecutter-musketeers-python-api

./: .gitignore  Dockerfile  Makefile  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.directory_name }}/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
{{ cookiecutter.directory_name }}/api/: __init__.py  environment.py  main.py
{{ cookiecutter.directory_name }}/api/models/: __init__.py
{{ cookiecutter.directory_name }}/api/schemas/: __init__.py
{{ cookiecutter.directory_name }}/api/tests/: __init__.py  conftest.py
{{ cookiecutter.directory_name }}/api/views/: __init__.py  health_check.py
{{ cookiecutter.directory_name }}/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  entrypoint.sh  gunicorn.sh
{{ cookiecutter.directory_name }}/migrations/: env.py
