[build-system]
requires = ["poetry=={{ cookiecutter.poetry_version }}"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.project_description }}"
version = "{{ cookiecutter.version }}"
license = "{{ cookiecutter.license }}"
readme = "README.md"
authors = ["{{ cookiecutter.author }}"]

[tool.poetry.dependencies]
python = "3.8.6"
sqlalchemy = "^1.3.19"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"
{% if cookiecutter.framework == "FastAPI" -%}
fastapi = "^0.61.1"
{% elif cookiecutter.framework.startswith("Falcon ") -%}
falcon = "^3.0.0a2"
pydantic = "^1.6.1"
{%- endif %}
{% if cookiecutter.framework == "FastAPI" or cookiecutter.framework == "Falcon 3 (ASGI)" -%}
uvicorn = "^0.11.8"
{%- endif %}
gunicorn = "^20.0.4"

# TODO: remove after https://github.com/python-poetry/poetry/issues/2042
importlib-metadata = "<1.2.0,>=1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
sqlalchemy-utils = "^0.36.8"
# These are used when developing in the Docker container with VSCode
pylint = "^2.6.0"
rope = "^0.17.0"
isort = "^5.4.2"
black = "^20.8b1"
