[build-system]
requires = ["poetry=={{ cookiecutter.poetry_version }}"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.project_description }}"
version = "{{ cookiecutter.version }}"
license = "{{ cookiecutter.license }}"
readme = "README.md"
authors = ["{{ cookiecutter.author }}"]

[tool.poetry.dependencies]
python = "3.9.2"
alembic = "^1.5.5"
{% if cookiecutter.framework == "FastAPI" -%}
fastapi = "^0.63.0"
{% elif cookiecutter.framework.startswith("Falcon ") -%}
falcon = "^3.0.0b2"
pydantic = "^1.7.3"
{%- endif %}
{% if cookiecutter.framework == "Falcon 3 (ASGI)" -%}
sqlalchemy = "^1.4.0b3"
asyncpg = "^0.22.0"
{% else -%}
sqlalchemy = "^1.3.23"
psycopg2 = "^2.8.6"
{%- endif %}
{% if cookiecutter.framework == "FastAPI" or cookiecutter.framework == "Falcon 3 (ASGI)" -%}
uvicorn = "^0.13.4"
{%- endif %}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
sqlalchemy-utils = "^0.36.8"
# These are used when developing in the Docker container with VSCode and elsewhere
pylint = "^2.6.0"
rope = "^0.17.0"
isort = "^5.7.0"
black = "^20.8b1"

[tool.isort]
profile = "black"
multi_line_output = 3
